feat: migrate to Spring AI Alibaba framework [doc]
- Upgrade Spring Boot 2.7.18 -> 3.4.3 (javax -> jakarta)
- Replace direct DashScope HttpClient calls with Spring AI ChatClient + EmbeddingModel
- Remove AIConfig, RedisConfig, EmbeddingService (replaced by Spring AI auto-config)
- Rewrite AIChatServiceImpl with ChatClient + Flux streaming
- Rewrite AIContentServiceImpl and AdminAIServiceImpl with ChatClient
- Update ContentIndexService to use EmbeddingModel
- Fix DocumentChunkService PDFBox 3.x API (PDDocument.load -> Loader.loadPDF)
- Restore spring-security-crypto (still used by AdminController)
- Upgrade MyBatis-Plus 3.5.5 -> 3.5.9, PDFBox 2.0.30 -> 3.0.3
- Update Dockerfile.backend to eclipse-temurin:21-jre-alpine
- Update deploy/application-prod.yml AI config
- Add design doc and implementation plan